# elm-torture

./: .gitignore  Cargo.toml  Makefile  azure-pipelines.yml  bors.toml  config.json  example-config.json  exit-codes.md
.github/: dependabot.yml
.github/config/: basic.json  debug.json  optimize.json
.github/workflows/: ci.yml  test.yml  torture.yml
ci/: install-rust.yml  run-suites.yml
ci/config/: basic.json  debug.json  optimize.json
embed-assets/: run.js
module-name-clash/: Module1.elm  README.md  elm.json
src/: main.rs
src/lib/: cli.rs  compile.rs  compile_and_run.rs  config.rs  find_suites.rs  formatting.rs  mod.rs  run.rs  suite.rs
suite/debug/half-baked-log/: output.json
suite/debug/log/: output.json
suite/echo/: elm.json
suite/hello-world/: elm.js  elm.json  output.json
suite/hello-world/src/: Main.elm
suite/issues/1246/: output.json
suite/issues/1516/: elm.json  output.json
suite/issues/1685/: output.json
suite/issues/1722/: Main.elm  output.json
suite/issues/1753/: Main.elm  elm.json
suite/issues/1776/: Main.elm  elm.json  output.json
suite/issues/1813/: output.json
suite/kill/: Main.elm  elm.json  output.json
suite/map-cmd/: output.json
suite/module-name-clash/: Main.elm  Module1.elm  Module2.elm  elm.json  targets.txt
suite/multiple-processes/: Main.elm
suite/multiple-subscriptions/: Main.elm
suite/numeric-package/: elm.json  output.json
suite/numeric-package/src/: Main.elm
suite/parser/back-slash-char/: output.json
suite/parser/nested-module-record/: output.json
suite/random/: elm.json
suite/sleep/: Main.elm  elm.json
suite/time-every/: Main.elm  output.json
suite/update-loop/: output.json
suite/util/Util/: Cmds.elm  Programs.elm
(+1 files in other folders)
