[package]
name = "elm-torture"
version = "0.1.0"
authors = ["Harry Sarson <harry.sarson@hotmail.co.uk>"]
edition = "2018"

[dependencies]
clap = "2"
which = "4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.7"
rust-embed = "5.6.0"
same-file = "1.0.6"
tempfile = "3.1.0"
indented = "0.1.0"
colored = "2.0"
replace_with = "0.1.7"
humantime-serde = "1.0.1"
pathdiff = "0.2.0"
tokio = { version = "0.3", features = ["full"] }
futures = "0.3.6"
humantime = "2.0.1"
