[package]
name = "elm-torture"
version = "0.1.0"
authors = ["Harry Sarson <harry.sarson@hotmail.co.uk>"]
edition = "2018"

[dependencies]
bstr = "0.2"
clap = "3.0.0-beta.1"
which = "4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.8"
rust-embed = "5.6.0"
same-file = "1.0.6"
tempfile = "3.2.0"
indented = "0.1.0"
colored = "2.0"
humantime-serde = "1.0.0"
pathdiff = "0.2.0"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.6"
humantime = "2.0.1"
wait-timeout = "0.2.0"
rayon = "1.5"
apply = "0.3"
crossbeam-channel = "0.4"
once_cell = "1.4"
lazy_static = "1.4"
