[package]
name = "elm-torture"
version = "0.1.0"
authors = ["Harry Sarson <harry.sarson@hotmail.co.uk>"]
edition = "2018"

[dependencies]
apply = "0.3"
bstr = "0.2"
clap = "3.0.0-beta.1"
colored = "2.0"
crossbeam-channel = "0.5"
env_logger = "0.8"
humantime = "2.0.1"
indented = "0.1.0"
lazy_static = "1.4"
log = "0.4"
rayon = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.1.0"
wait-timeout = "0.2.0"
which = "4.0"

